Run on port from .env

--- a/client/.env.sample
+++ b/client/.env.sample
@@ -7,4 +7,4 @@
 REACT_APP_PASSCODE='777'
 REACT_APP_HOST='http://localhost:3000'                  # local machine
 # REACT_APP_HOST='http://csci331.cs.montana.edu:30XX'   # server
-
+PORT=50xx
