--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "set PORT=5006 && node index.js",
     "devStart": "nodemon index.js"
   },
   "keywords": [],
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.19",
     "parser": "^0.1.4"
   }
