--- a/client/src/components/Footer.jsx.sample
+++ b/client/src/components/Footer.jsx.sample
@@ -4,7 +4,7 @@ const Footer = () => {
 
   return (
     <footer>
-        <h4>Hosted by: Name ~ NetId </h4>
+        <h4>Hosted by: Ezra Skoog ~ q55r879 </h4>
         <p> <b>Port:</b> 30/50xx </p>
         <p> Describe your contributions to the project </p>
     </footer>
