add database and port

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -4,8 +4,8 @@
 # be made on both your local machine and the server.
 
 # server
-DBUSER='userXX'
-DBPASS='XXpass'
-DATABASE='dbXX'
+DBUSER='user61'
+DBPASS='61ruts'
+DATABASE='db61'
 DBPORT=3306
-EXPRESSPORT=30XX
+EXPRESSPORT=3061
