--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts -r dotenv/config start",
+    "start": "PORT=5063 react-scripts -r dotenv/config start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
