--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "Daniel DeFrance",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
