--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
-    "parser": "^0.1.4"
+    "parser": "^0.1.4",
+    "sessionstorage": "^0.1.0"
   }
 }
