--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
     "parser": "^0.1.4",
+    "randomstring": "^1.2.3",
     "sessionstorage": "^0.1.0"
   }
 }
