--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19",
-    "parser": "^0.1.4"
+    "parser": "^0.1.4",
+    "react-router-dom": "^6.4.4"
   }
 }
