--- a/client/package.json
+++ b/client/package.json
@@ -39,5 +39,9 @@
   },
   "devDependencies": {
     "dotenv-webpack": "^8.0.1"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
