--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "forever": "^4.0.3",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19",
     "parser": "^0.1.4"
